--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,11 @@
 <div class="jumbotron text-center">
   <h1>Counters MEAN App</h1>
-  <p class="lead">Welcome to out first MEAN stack application built from sratch</p>
-  <div>
+  <p class="lead">Welcome to my first MEAN stack application built from scratch</p>
+  <div *ngIf="authService.isLoggedIn()">
+    <a class="btn btn-primary" [routerLink]="['/counters']">My Counters</a>
+    <a class="btn btn-default" [routerLink]="['/profile']">Profile</a>
+  </div>
+  <div *ngIf="!authService.isLoggedIn()">
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
     <a class="btn btn-default" [routerLink]="['/login']">Login</a>
   </div>
@@ -10,7 +14,7 @@
 <div class="row">
   <div class="col-md-4">
     <h3>Express Backend</h3>
-    <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database.</p>
+    <p>Node.js/Express server using Mongoose to organize models and query the database.</p>
   </div>
   <div class="col-md-4">
     <h3>Angular-CLI</h3>
