--- a/src/app/components/my-counters/my-counters.component.html
+++ b/src/app/components/my-counters/my-counters.component.html
@@ -1,1 +1,3 @@
+<h2 class="page-header">My Counters</h2>
+<app-counter-form></app-counter-form>
 <app-counter *ngFor="let counter of counters" [counter]="counter"></app-counter>
